--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ tensorflow>=2.8.0
 flwr>=1.0.0,<2.0.0
 joblib>=1.1.0
 pytest>=7.0.0
+mlflow>=2.8.0
+ray[serve]==2.35.0
+fastapi>=0.95.0
+uvicorn>=0.15.0
+requests>=2.31.0
